# openbarcode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
libopenbarcode/: CMakeLists.txt  decoder.cpp  decoder.h  decoder_barcode.cpp  decoder_barcode.h  decoder_code128.cpp  decoder_code128.h  decoder_code39.cpp  decoder_code39.h  decoder_dmtx.cpp  decoder_dmtx.h  detector.cpp  detector.h  detector_barcode.cpp  detector_barcode.h  detector_dmtx.cpp  detector_dmtx.h  openbarcode.h  options.h
libopenbarcode/libdmtx/: config.h  dmtxdecode.c
openbarcode/: CMakeLists.txt  decoder.cpp  decoder.h  detector.cpp  detector.h  options.h
openbarcode-cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  main.cpp
